# itmo_reliableml

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  torch_to_onnx.py  tox.ini
designdoc/: designdoc.md
notebooks/: Concat_outputs_YOLO5.ipynb  EDA_Dental_Condition_Dataset.ipynb  EDA_newdentiso1.ipynb  convert_YOLO5_to_ONNX.ipynb  mean_std.ipynb  wandb_Dentasis_v30_4_Dental_disease_detection_Occlus.ipynb  wandb_Dentasis_v30_5_Dental_disease_detection_Occlus_background.ipynb  wandb_Dentasis_v30_6_Dental_disease_detection_Occlus_background.ipynb  wandb_Dentasis_v30_v2.ipynb  wandb_Dentasis_v30_v2_Occlus.ipynb  wandb_Dentasis_v30_v3.ipynb  wandb_dataset_load.ipynb  yolov5_train.ipynb
service/: request.py  response.py  settings.py
service/api/: app.py  exception_handlers.py  exceptions.py  views.py
service/database/: db_api.py
service/ml_models/: yolov5_model.py
service/train_models/: init_run.py
templates/: base.html
